@@ -10,6 +10,7 @@
     first_scenario=the_raid
 
     define=CAMPAIGN_LIBERTY
+    extra_defines=USE_L3_OUTLAWS
     difficulties=EASY,NORMAL,HARD
     difficulty_descriptions={MENU_IMG_TXT2 "units/human-peasants/peasant.png~RC(magenta>red)" _"Peasant" _"(Easy)"} + ";" + {MENU_IMG_TXT2 "units/human-outlaws/outlaw.png~RC(magenta>red)" _"Outlaw" _"(Normal)"} + ";" + {MENU_IMG_TXT2 "units/human-outlaws/fugitive.png~RC(magenta>red)" _"Fugitive" _"(Difficult)"}
     icon="units/human-outlaws/fugitive.png"
