@@ -8,6 +8,7 @@
     name= _ "Northern Rebirth"
     first_scenario=chain_break
     define=CAMPAIGN_NORTHERN_REBIRTH
+    extra_defines=USE_L3_OUTLAWS
     difficulties=NEWBIE,EASY,NORMAL,HARD
     difficulty_descriptions={MENU_IMG_TXT2 "units/human-peasants/peasant.png~RC(magenta>red)"    _"Peasant" _"(Normal)"}  + ";" +
     {MENU_IMG_TXT2 "units/human-loyalists/spearman.png~RC(magenta>red)" _"Spearman" _"(Challenging)"} + ";" +
